k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecotrack-api
  namespace: ecotrack-prod
  labels:
    app: ecotrack-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  selector:
    app: ecotrack-api
    color: blue   # Blue/Green: updated during traffic shift
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
